tests/snapshots/formats__vmdk__qemu-stream-optimized.vmdk.raw.zst.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ qemu-stream-optimized.vmdk — VMDK stream-optimized sparse extent (streamOptimized), version 3, 256 KiB virtual, 64 KiB grains, deflate-compressed  [0x0+0x20000]
  ▾ Header  [0x0+0x200]
      Magic: "KDMV"  [0x0+0x4]
      Version: 3  [0x4+0x4]
      Flags: 0x30003 [VALID_NEWLINE_TEST | REDUNDANT_GRAIN_TABLE | COMPRESSED_GRAINS | MARKERS]  [0x8+0x4]
      Capacity (sectors): 512 — 256 KiB  [0xc+0x8]
      Grain size (sectors): 128 — 64 KiB  [0x14+0x8]
      Descriptor offset (sectors): 1  [0x1c+0x8]
      Descriptor size (sectors): 20  [0x24+0x8]
      Entries per grain table: 512  [0x2c+0x4]
      Redundant grain directory (sector): 21 — at 0x2a00  [0x30+0x8]
      Grain directory (sector): 26 — at 0x3400  [0x38+0x8]
      Overhead (sectors): 128 — metadata before the first grain: 64 KiB  [0x40+0x8]
      Unclean shutdown: 0  [0x48+0x1]
      Newline test: single end-of-line: 0xa  [0x49+0x1]
      Newline test: non end-of-line: 0x20  [0x4a+0x1]
      Newline test: CR: 0xd  [0x4b+0x1]
      Newline test: LF: 0xa  [0x4c+0x1]
      Compression: deflate (0x1)  [0x4d+0x2]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x4f+0x1b1]
  ▾ Descriptor — streamOptimized, 1 extent  [0x200+0x160]
      Comment: "Disk DescriptorFile"  [0x200+0x16]
      version: "1"  [0x216+0xa]
      CID: "5670ecb3"  [0x220+0xd]
      parentCID: "ffffffff"  [0x22d+0x13]
      createType: "streamOptimized"  [0x240+0x1d]
      Comment: "Extent description"  [0x25e+0x15]
      Extent: "RW 512 SPARSE \"qemu-stream-optimized.vmdk\"" — RW SPARSE, 256 KiB in "qemu-stream-optimized.vmdk"  [0x273+0x2b]
      Comment: "The Disk Data Base"  [0x29f+0x15]
      Comment: "DDB"  [0x2b4+0x5]
      ddb.virtualHWVersion: "4"  [0x2ba+0x1b]
      ddb.geometry.cylinders: "0"  [0x2d5+0x1d]
      ddb.geometry.heads: "16"  [0x2f2+0x1a]
      ddb.geometry.sectors: "63"  [0x30c+0x1c]
      ddb.adapterType: "ide"  [0x328+0x18]
      ddb.toolsVersion: "2147483647"  [0x340+0x20]
    Descriptor padding — 9.7 KiB of descriptor space unused  [0x360+0x26a0]
  ▾ Redundant grain directory — 1 grain table  [0x2a00+0x4]
    ▾ GD[0]: 22 — guest 0x0–0x1ffffff: grain table at 0x2c00  [0x2a00+0x4] → 0x2c00+0x800
      ▾ GT[0]: 128 — guest 0x0: compressed grain at 0x10000, 519 bytes  [0x2c00+0x4] → 0x10000+0x213
          Marker: LBA: 0 — guest 0x0  [0x10000+0x8]
          Marker: compressed size: 519  [0x10008+0x4]
        ▾ Compressed grain — 519 bytes  [0x1000c+0x207]
            Decompressed — 64 KiB  [#1:0x0+0x10000]
        GT[1–511]: unallocated (0x0) — guest 0x10000–0x1ffffff: unallocated  [0x2c04+0x7fc]
  ▾ Grain directory — 1 grain table of 512 entries, each covering 32 MiB  [0x3400+0x4]
    ▾ GD[0]: 27 — guest 0x0–0x1ffffff: grain table at 0x3600  [0x3400+0x4] → 0x3600+0x800
      ▾ GT[0]: 128 — guest 0x0: compressed grain at 0x10000, 519 bytes  [0x3600+0x4] → 0x10000+0x213
          Marker: LBA: 0 — guest 0x0  [0x10000+0x8]
          Marker: compressed size: 519  [0x10008+0x4]
        ▾ Compressed grain — 519 bytes  [0x1000c+0x207]
            Decompressed — 64 KiB  [#1:0x0+0x10000]
        GT[1–511]: unallocated (0x0) — guest 0x10000–0x1ffffff: unallocated  [0x3604+0x7fc]
  ▾ Stream — grain and metadata markers after the overhead  [0x10000+0x10000]
    ▾ Grain marker — guest 0x0, 519 compressed bytes  [0x10000+0x400]
        Marker: LBA: 0 — guest 0x0  [0x10000+0x8]
        Marker: compressed size: 519  [0x10008+0x4]
      ▾ Compressed grain — 519 bytes  [0x1000c+0x207]
          Decompressed — 64 KiB  [#1:0x0+0x10000]
    ▾ Marker: end of stream — end of stream  [0x10400+0x200]
        Sectors: 0  [0x10400+0x8]
        Size: 0  [0x10408+0x4]
        Type: end of stream (0x0)  [0x1040c+0x4]
        Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x10410+0x1f0]
      After the end of stream — 62.5 KiB  [0x10600+0xfa00]
  ▾ Extent layout — what each part of the file holds  [0x0+0x20000]
      Header — 512 bytes  [0x0+0x200]
      Descriptor — 10 KiB  [0x200+0x2800]
      Redundant grain directory — 512 bytes  [0x2a00+0x200]
      Redundant grain table — 2 KiB  [0x2c00+0x800]
      Grain directory — 512 bytes  [0x3400+0x200]
      Grain table — 2 KiB  [0x3600+0x800]
      Unused — 48.5 KiB, not referenced by the grain tables  [0x3e00+0xc200]
      Compressed grain — 1 KiB  [0x10000+0x400]
      Unused — 63 KiB, not referenced by the grain tables  [0x10400+0xfc00]
  ▾ Virtual disk — FAT12 filesystem "FILLYFOAL", 256 KiB, 119 clusters of 2 KiB
    ▾ Boot sector (BPB) — OEM "mkfs.fat"  [#2:0x0+0x200]
        Jump instruction: eb 3c 90  |.<.|  [#2:0x0+0x3]
        OEM name: "mkfs.fat"  [#2:0x3+0x8]
        Bytes per sector: 512  [#2:0xb+0x2]
        Sectors per cluster: 4  [#2:0xd+0x1]
        Reserved sectors: 1  [#2:0xe+0x2]
        Number of FATs: 2  [#2:0x10+0x1]
        Root directory entries: 512  [#2:0x11+0x2]
        Total sectors (16-bit): 512  [#2:0x13+0x2]
        Media descriptor: fixed disk (0xf8)  [#2:0x15+0x1]
        Sectors per FAT (FAT12/16): 1  [#2:0x16+0x2]
        Sectors per track: 16  [#2:0x18+0x2]
        Heads: 2  [#2:0x1a+0x2]
        Hidden sectors: 0  [#2:0x1c+0x4]
        Total sectors (32-bit): 0  [#2:0x20+0x4]
    ▾ Extended BPB  [#2:0x24+0x1a]
        Drive number: 0x80  [#2:0x24+0x1]
        Reserved: 0  [#2:0x25+0x1]
        Extended boot signature: 0x29  [#2:0x26+0x1]
        Volume serial number: 0x12345678  [#2:0x27+0x4]
        Volume label: "FILLYFOAL  "  [#2:0x2b+0xb]
        Filesystem type: "FAT12   "  [#2:0x36+0x8]
      Boot code — 448 bytes  [#2:0x3e+0x1c0]
      Boot signature: 0xaa55  [#2:0x1fe+0x2]
    ▾ FAT 1 — FAT12 entries  [#2:0x200+0x200]
        Entry 0: 0xff8 — the media descriptor, padded with ones  [#2:0x200+0x2]
        Entry 1: 0xfff — end of chain marker  [#2:0x201+0x2]
        Cluster 2: 0xfff — end of chain  [#2:0x203+0x2] → #2:0x4600+0x800
        Cluster 3: 0xfff — end of chain  [#2:0x204+0x2] → #2:0x4e00+0x800
        Clusters 4–120: 0 — free  [#2:0x206+0xb0]
        Unused — entries beyond the last cluster  [#2:0x2b6+0x14a]
      FAT 2 — copy  [#2:0x400+0x200]
    ▾ Root directory  [#2:0x600+0x4000]
        Volume label: "FILLYFOAL"  [#2:0x600+0x20]
      ▾ hello.txt — 21 bytes, modified 2023-11-14 22:13:20  [#2:0x620+0x20]
        ▾ Directory entry  [#2:0x620+0x20]
            Short name: "HELLO.TXT"  [#2:0x620+0xb]
            Attributes: 0x20 [ARCHIVE]  [#2:0x62b+0x1]
            Case flags (NT): 0x18 [LOWERCASE_BASE | LOWERCASE_EXT]  [#2:0x62c+0x1]
            Creation time, 10 ms units: 0  [#2:0x62d+0x1]
            Created: 2023-11-14 22:13:20 UTC  [#2:0x62e+0x4]
            Accessed: 2023-11-14 00:00:00 UTC  [#2:0x632+0x2]
            First cluster (high word): 0  [#2:0x634+0x2]
            Modified: 2023-11-14 22:13:20 UTC  [#2:0x636+0x4]
            First cluster (low word): 2  [#2:0x63a+0x2]
            File size: 21 — 21 bytes  [#2:0x63c+0x4]
        ▾ Clusters — contiguous, 21 bytes
            Fragment 0 — file offset 0x0, 21 bytes  [#2:0x4600+0x15]
        ▾ Content — UTF-8 text, LF line endings, 1 line  [#2:0x4600+0x15]
            Encoding: "UTF-8"
            Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
          ▾ Lines — 1 line  [#2:0x4600+0x15]
              Line 1: "hello from fillyfoal"  [#2:0x4600+0x14]
      ▾ numbers.txt — 171 bytes, modified 2023-11-14 22:13:20  [#2:0x640+0x20]
        ▾ Directory entry  [#2:0x640+0x20]
            Short name: "NUMBERS.TXT"  [#2:0x640+0xb]
            Attributes: 0x20 [ARCHIVE]  [#2:0x64b+0x1]
            Case flags (NT): 0x18 [LOWERCASE_BASE | LOWERCASE_EXT]  [#2:0x64c+0x1]
            Creation time, 10 ms units: 0  [#2:0x64d+0x1]
            Created: 2023-11-14 22:13:20 UTC  [#2:0x64e+0x4]
            Accessed: 2023-11-14 00:00:00 UTC  [#2:0x652+0x2]
            First cluster (high word): 0  [#2:0x654+0x2]
            Modified: 2023-11-14 22:13:20 UTC  [#2:0x656+0x4]
            First cluster (low word): 3  [#2:0x65a+0x2]
            File size: 171 — 171 bytes  [#2:0x65c+0x4]
        ▾ Clusters — contiguous, 171 bytes
            Fragment 0 — file offset 0x0, 171 bytes  [#2:0x4e00+0xab]
        ▾ Content — UTF-8 text, LF line endings, 60 lines  [#2:0x4e00+0xab]
            Encoding: "UTF-8"
            Line endings: "LF" — 60 LF, 0 CRLF, 0 CR
          ▾ Lines — 60 lines  [#2:0x4e00+0xab]
              Line 1: "1"  [#2:0x4e00+0x1]
              Line 2: "2"  [#2:0x4e02+0x1]
              Line 3: "3"  [#2:0x4e04+0x1]
              Line 4: "4"  [#2:0x4e06+0x1]
              Line 5: "5"  [#2:0x4e08+0x1]
              Line 6: "6"  [#2:0x4e0a+0x1]
              Line 7: "7"  [#2:0x4e0c+0x1]
              Line 8: "8"  [#2:0x4e0e+0x1]
              Line 9: "9"  [#2:0x4e10+0x1]
              Line 10: "10"  [#2:0x4e12+0x2]
              Line 11: "11"  [#2:0x4e15+0x2]
              Line 12: "12"  [#2:0x4e18+0x2]
              Line 13: "13"  [#2:0x4e1b+0x2]
              Line 14: "14"  [#2:0x4e1e+0x2]
              Line 15: "15"  [#2:0x4e21+0x2]
              Line 16: "16"  [#2:0x4e24+0x2]
              Line 17: "17"  [#2:0x4e27+0x2]
              Line 18: "18"  [#2:0x4e2a+0x2]
              Line 19: "19"  [#2:0x4e2d+0x2]
              Line 20: "20"  [#2:0x4e30+0x2]
              Line 21: "21"  [#2:0x4e33+0x2]
              Line 22: "22"  [#2:0x4e36+0x2]
              Line 23: "23"  [#2:0x4e39+0x2]
              Line 24: "24"  [#2:0x4e3c+0x2]
              Line 25: "25"  [#2:0x4e3f+0x2]
              Line 26: "26"  [#2:0x4e42+0x2]
              Line 27: "27"  [#2:0x4e45+0x2]
              Line 28: "28"  [#2:0x4e48+0x2]
              Line 29: "29"  [#2:0x4e4b+0x2]
              Line 30: "30"  [#2:0x4e4e+0x2]
              Line 31: "31"  [#2:0x4e51+0x2]
              Line 32: "32"  [#2:0x4e54+0x2]
              Line 33: "33"  [#2:0x4e57+0x2]
              Line 34: "34"  [#2:0x4e5a+0x2]
              Line 35: "35"  [#2:0x4e5d+0x2]
              Line 36: "36"  [#2:0x4e60+0x2]
              Line 37: "37"  [#2:0x4e63+0x2]
              Line 38: "38"  [#2:0x4e66+0x2]
              Line 39: "39"  [#2:0x4e69+0x2]
              Line 40: "40"  [#2:0x4e6c+0x2]
              Line 41: "41"  [#2:0x4e6f+0x2]
              Line 42: "42"  [#2:0x4e72+0x2]
              Line 43: "43"  [#2:0x4e75+0x2]
              Line 44: "44"  [#2:0x4e78+0x2]
              Line 45: "45"  [#2:0x4e7b+0x2]
              Line 46: "46"  [#2:0x4e7e+0x2]
              Line 47: "47"  [#2:0x4e81+0x2]
              Line 48: "48"  [#2:0x4e84+0x2]
              Line 49: "49"  [#2:0x4e87+0x2]
              Line 50: "50"  [#2:0x4e8a+0x2]
              Line 51: "51"  [#2:0x4e8d+0x2]
              Line 52: "52"  [#2:0x4e90+0x2]
              Line 53: "53"  [#2:0x4e93+0x2]
              Line 54: "54"  [#2:0x4e96+0x2]
              Line 55: "55"  [#2:0x4e99+0x2]
              Line 56: "56"  [#2:0x4e9c+0x2]
              Line 57: "57"  [#2:0x4e9f+0x2]
              Line 58: "58"  [#2:0x4ea2+0x2]
              Line 59: "59"  [#2:0x4ea5+0x2]
              Line 60: "60"  [#2:0x4ea8+0x2]
        Unused entries — 509 free slots (end of directory)  [#2:0x660+0x3fa0]
      Data region — 238.5 KiB  [#2:0x4600+0x3ba00]
    ▾ Free clusters — from the FAT
        Clusters 4–120 — free, 234 KiB  [#2:0x5600+0x3a800]
