tests/snapshots/formats__vmdk__qemu-twogb-s001.vmdk.raw.zst.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ qemu-twogb-s001.vmdk.raw — VMDK sparse extent, version 1, 256 KiB virtual, 64 KiB grains  [0x0+0x20000]
  ▾ Header  [0x0+0x200]
      Magic: "KDMV"  [0x0+0x4]
      Version: 1  [0x4+0x4]
      Flags: 0x3 [VALID_NEWLINE_TEST | REDUNDANT_GRAIN_TABLE]  [0x8+0x4]
      Capacity (sectors): 512 — 256 KiB  [0xc+0x8]
      Grain size (sectors): 128 — 64 KiB  [0x14+0x8]
      Descriptor offset (sectors): 1  [0x1c+0x8]
      Descriptor size (sectors): 20  [0x24+0x8]
      Entries per grain table: 512  [0x2c+0x4]
      Redundant grain directory (sector): 21 — at 0x2a00  [0x30+0x8]
      Grain directory (sector): 26 — at 0x3400  [0x38+0x8]
      Overhead (sectors): 128 — metadata before the first grain: 64 KiB  [0x40+0x8]
      Unclean shutdown: 0  [0x48+0x1]
      Newline test: single end-of-line: 0xa  [0x49+0x1]
      Newline test: non end-of-line: 0x20  [0x4a+0x1]
      Newline test: CR: 0xd  [0x4b+0x1]
      Newline test: LF: 0xa  [0x4c+0x1]
      Compression: none (0x0)  [0x4d+0x2]
      Padding: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 …  |................|  [0x4f+0x1b1]
    Descriptor padding — 10 KiB of descriptor space unused  [0x200+0x2800]
  ▾ Redundant grain directory — 1 grain table  [0x2a00+0x4]
    ▾ GD[0]: 22 — guest 0x0–0x1ffffff: grain table at 0x2c00  [0x2a00+0x4] → 0x2c00+0x800
        GT[0]: 128 — guest 0x0: grain at 0x10000  [0x2c00+0x4] → 0x10000+0x10000
        GT[1–511]: unallocated (0x0) — guest 0x10000–0x1ffffff: unallocated  [0x2c04+0x7fc]
  ▾ Grain directory — 1 grain table of 512 entries, each covering 32 MiB  [0x3400+0x4]
    ▾ GD[0]: 27 — guest 0x0–0x1ffffff: grain table at 0x3600  [0x3400+0x4] → 0x3600+0x800
        GT[0]: 128 — guest 0x0: grain at 0x10000  [0x3600+0x4] → 0x10000+0x10000
        GT[1–511]: unallocated (0x0) — guest 0x10000–0x1ffffff: unallocated  [0x3604+0x7fc]
  ▾ Extent layout — what each part of the file holds  [0x0+0x20000]
      Header — 512 bytes  [0x0+0x200]
      Descriptor — 10 KiB  [0x200+0x2800]
      Redundant grain directory — 512 bytes  [0x2a00+0x200]
      Redundant grain table — 2 KiB  [0x2c00+0x800]
      Grain directory — 512 bytes  [0x3400+0x200]
      Grain table — 2 KiB  [0x3600+0x800]
      Unused — 48.5 KiB, not referenced by the grain tables  [0x3e00+0xc200]
      Grain — guest 0x0–0xffff, 64 KiB  [0x10000+0x10000]
  ▾ Virtual disk — FAT12 filesystem "FILLYFOAL", 256 KiB, 119 clusters of 2 KiB
    ▾ Boot sector (BPB) — OEM "mkfs.fat"  [#1:0x0+0x200]
        Jump instruction: eb 3c 90  |.<.|  [#1:0x0+0x3]
        OEM name: "mkfs.fat"  [#1:0x3+0x8]
        Bytes per sector: 512  [#1:0xb+0x2]
        Sectors per cluster: 4  [#1:0xd+0x1]
        Reserved sectors: 1  [#1:0xe+0x2]
        Number of FATs: 2  [#1:0x10+0x1]
        Root directory entries: 512  [#1:0x11+0x2]
        Total sectors (16-bit): 512  [#1:0x13+0x2]
        Media descriptor: fixed disk (0xf8)  [#1:0x15+0x1]
        Sectors per FAT (FAT12/16): 1  [#1:0x16+0x2]
        Sectors per track: 16  [#1:0x18+0x2]
        Heads: 2  [#1:0x1a+0x2]
        Hidden sectors: 0  [#1:0x1c+0x4]
        Total sectors (32-bit): 0  [#1:0x20+0x4]
    ▾ Extended BPB  [#1:0x24+0x1a]
        Drive number: 0x80  [#1:0x24+0x1]
        Reserved: 0  [#1:0x25+0x1]
        Extended boot signature: 0x29  [#1:0x26+0x1]
        Volume serial number: 0x12345678  [#1:0x27+0x4]
        Volume label: "FILLYFOAL  "  [#1:0x2b+0xb]
        Filesystem type: "FAT12   "  [#1:0x36+0x8]
    ▾ FAT 1 — FAT12 entries  [#1:0x200+0x200]
        Cluster 2 — end of chain → #1:0x4600+0x800
        Cluster 3 — end of chain → #1:0x4e00+0x800
        Clusters 4–120 — free
      FAT 2 — copy  [#1:0x400+0x200]
    ▾ Root directory  [#1:0x600+0x4000]
        Volume label: "FILLYFOAL"  [#1:0x600+0x20]
      ▾ hello.txt — 21 bytes, modified 2023-11-14 22:13:20  [#1:0x620+0x20]
        ▾ Directory entry  [#1:0x620+0x20]
            Short name: "HELLO.TXT"  [#1:0x620+0xb]
            Attributes: 0x20 [ARCHIVE]  [#1:0x62b+0x1]
            Case flags (NT): 0x18 [LOWERCASE_BASE | LOWERCASE_EXT]  [#1:0x62c+0x1]
            Creation time, 10 ms units: 0  [#1:0x62d+0x1]
            Created: 2023-11-14 22:13:20 UTC  [#1:0x62e+0x4]
            Accessed: 2023-11-14 00:00:00 UTC  [#1:0x632+0x2]
            First cluster (high word): 0  [#1:0x634+0x2]
            Modified: 2023-11-14 22:13:20 UTC  [#1:0x636+0x4]
            First cluster (low word): 2  [#1:0x63a+0x2]
            File size: 21 — 21 bytes  [#1:0x63c+0x4]
        ▾ Clusters — contiguous, 21 bytes
            Fragment 0 — file offset 0x0, 21 bytes  [#1:0x4600+0x15]
        ▾ Content — UTF-8 text, LF line endings, 1 line  [#1:0x4600+0x15]
            Encoding: "UTF-8"
            Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
          ▾ Lines — 1 line  [#1:0x4600+0x15]
              Line 1: "hello from fillyfoal"  [#1:0x4600+0x14]
      ▾ numbers.txt — 171 bytes, modified 2023-11-14 22:13:20  [#1:0x640+0x20]
        ▾ Directory entry  [#1:0x640+0x20]
            Short name: "NUMBERS.TXT"  [#1:0x640+0xb]
            Attributes: 0x20 [ARCHIVE]  [#1:0x64b+0x1]
            Case flags (NT): 0x18 [LOWERCASE_BASE | LOWERCASE_EXT]  [#1:0x64c+0x1]
            Creation time, 10 ms units: 0  [#1:0x64d+0x1]
            Created: 2023-11-14 22:13:20 UTC  [#1:0x64e+0x4]
            Accessed: 2023-11-14 00:00:00 UTC  [#1:0x652+0x2]
            First cluster (high word): 0  [#1:0x654+0x2]
            Modified: 2023-11-14 22:13:20 UTC  [#1:0x656+0x4]
            First cluster (low word): 3  [#1:0x65a+0x2]
            File size: 171 — 171 bytes  [#1:0x65c+0x4]
        ▾ Clusters — contiguous, 171 bytes
            Fragment 0 — file offset 0x0, 171 bytes  [#1:0x4e00+0xab]
        ▾ Content — UTF-8 text, LF line endings, 60 lines  [#1:0x4e00+0xab]
            Encoding: "UTF-8"
            Line endings: "LF" — 60 LF, 0 CRLF, 0 CR
          ▾ Lines — 60 lines  [#1:0x4e00+0xab]
              Line 1: "1"  [#1:0x4e00+0x1]
              Line 2: "2"  [#1:0x4e02+0x1]
              Line 3: "3"  [#1:0x4e04+0x1]
              Line 4: "4"  [#1:0x4e06+0x1]
              Line 5: "5"  [#1:0x4e08+0x1]
              Line 6: "6"  [#1:0x4e0a+0x1]
              Line 7: "7"  [#1:0x4e0c+0x1]
              Line 8: "8"  [#1:0x4e0e+0x1]
              Line 9: "9"  [#1:0x4e10+0x1]
              Line 10: "10"  [#1:0x4e12+0x2]
              Line 11: "11"  [#1:0x4e15+0x2]
              Line 12: "12"  [#1:0x4e18+0x2]
              Line 13: "13"  [#1:0x4e1b+0x2]
              Line 14: "14"  [#1:0x4e1e+0x2]
              Line 15: "15"  [#1:0x4e21+0x2]
              Line 16: "16"  [#1:0x4e24+0x2]
              Line 17: "17"  [#1:0x4e27+0x2]
              Line 18: "18"  [#1:0x4e2a+0x2]
              Line 19: "19"  [#1:0x4e2d+0x2]
              Line 20: "20"  [#1:0x4e30+0x2]
              Line 21: "21"  [#1:0x4e33+0x2]
              Line 22: "22"  [#1:0x4e36+0x2]
              Line 23: "23"  [#1:0x4e39+0x2]
              Line 24: "24"  [#1:0x4e3c+0x2]
              Line 25: "25"  [#1:0x4e3f+0x2]
              Line 26: "26"  [#1:0x4e42+0x2]
              Line 27: "27"  [#1:0x4e45+0x2]
              Line 28: "28"  [#1:0x4e48+0x2]
              Line 29: "29"  [#1:0x4e4b+0x2]
              Line 30: "30"  [#1:0x4e4e+0x2]
              Line 31: "31"  [#1:0x4e51+0x2]
              Line 32: "32"  [#1:0x4e54+0x2]
              Line 33: "33"  [#1:0x4e57+0x2]
              Line 34: "34"  [#1:0x4e5a+0x2]
              Line 35: "35"  [#1:0x4e5d+0x2]
              Line 36: "36"  [#1:0x4e60+0x2]
              Line 37: "37"  [#1:0x4e63+0x2]
              Line 38: "38"  [#1:0x4e66+0x2]
              Line 39: "39"  [#1:0x4e69+0x2]
              Line 40: "40"  [#1:0x4e6c+0x2]
              Line 41: "41"  [#1:0x4e6f+0x2]
              Line 42: "42"  [#1:0x4e72+0x2]
              Line 43: "43"  [#1:0x4e75+0x2]
              Line 44: "44"  [#1:0x4e78+0x2]
              Line 45: "45"  [#1:0x4e7b+0x2]
              Line 46: "46"  [#1:0x4e7e+0x2]
              Line 47: "47"  [#1:0x4e81+0x2]
              Line 48: "48"  [#1:0x4e84+0x2]
              Line 49: "49"  [#1:0x4e87+0x2]
              Line 50: "50"  [#1:0x4e8a+0x2]
              Line 51: "51"  [#1:0x4e8d+0x2]
              Line 52: "52"  [#1:0x4e90+0x2]
              Line 53: "53"  [#1:0x4e93+0x2]
              Line 54: "54"  [#1:0x4e96+0x2]
              Line 55: "55"  [#1:0x4e99+0x2]
              Line 56: "56"  [#1:0x4e9c+0x2]
              Line 57: "57"  [#1:0x4e9f+0x2]
              Line 58: "58"  [#1:0x4ea2+0x2]
              Line 59: "59"  [#1:0x4ea5+0x2]
              Line 60: "60"  [#1:0x4ea8+0x2]
      Data region — 238.5 KiB  [#1:0x4600+0x3ba00]
