tests/snapshots/formats__vmdk__sparse.vmdk.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ sparse.vmdk — VMDK sparse extent (monolithicSparse), 32 KiB virtual, 4 KiB grains  [0x0+0x4000]
  ▾ Header  [0x0+0x200]
      Magic: "KDMV"  [0x0+0x4]
      Version: 1  [0x4+0x4]
      Flags: 0x3 [VALID_NEWLINE_TEST | REDUNDANT_GRAIN_TABLE]  [0x8+0x4]
      Capacity (sectors): 64 — 32 KiB  [0xc+0x8]
      Grain size (sectors): 8 — 4 KiB  [0x14+0x8]
      Descriptor offset (sectors): 1  [0x1c+0x8]
      Descriptor size (sectors): 2  [0x24+0x8]
      Entries per grain table: 512  [0x2c+0x4]
      Redundant grain directory (sectors): 0  [0x30+0x8]
      Grain directory (sectors): 0x3  [0x38+0x8]
      Overhead (sectors): 16  [0x40+0x8]
      Unclean shutdown: 0  [0x48+0x1]
      Newline test: single end-of-line: 0xa  [0x49+0x1]
      Newline test: non end-of-line: 0x20  [0x4a+0x1]
      Newline test: CR: 0xd  [0x4b+0x1]
      Newline test: LF: 0xa  [0x4c+0x1]
      Compression: none (0x0)  [0x4d+0x2]
  ▾ Descriptor: "# Disk DescriptorFile\nversion=1\nencoding=\"UTF-8\"\nCID=fffffffe\nparentCID=ffffffff\ncreateType=\"monolithicSparse\"\n\n# Extent description\nRW 64 SPARSE \"fixture.vmdk\"\n\n# The Disk Data Base\n#DDB\n\nddb.virtualHWVersion = \"4\"\nddb.geometry.cylinders = \"1\"\nddb.geometry.heads = \"16\"\nddb.geometry.sectors = \"63\"\nddb.adapterType = \"ide\"\n"  [0x200+0x143]
      version: "1"  [0x216+0x9]
      encoding: "UTF-8"  [0x220+0x10]
      CID: "fffffffe"  [0x231+0xc]
      parentCID: "ffffffff"  [0x23e+0x12]
      createType: "monolithicSparse"  [0x251+0x1d]
      Extent: "RW 64 SPARSE \"fixture.vmdk\"" — RW SPARSE, 32 KiB in "fixture.vmdk"  [0x285+0x1b]
      ddb.virtualHWVersion: "4"  [0x2bd+0x1a]
      ddb.geometry.cylinders: "1"  [0x2d8+0x1c]
      ddb.geometry.heads: "16"  [0x2f5+0x19]
      ddb.geometry.sectors: "63"  [0x30f+0x1b]
      ddb.adapterType: "ide"  [0x32b+0x17]
    Grain directory — 1 grain tables  [0x600+0x4]
  ▾ Virtual disk — MBR partition table, 1 primary partition, 32 KiB
      Bootstrap code — empty  [#2:0x0+0x1b8]
      Disk signature: 0xbadf00d  [#2:0x1b8+0x4]
    ▾ Partition 1 — FAT12 (0x01), 24 KiB at LBA 1, active  [#2:0x1be+0x10]
      ▾ Entry  [#2:0x1be+0x10]
          Boot indicator: active (bootable) (0x80)  [#2:0x1be+0x1]
          First sector (CHS): fe ff ff  |...| — C/H/S 1023/254/63  [#2:0x1bf+0x3]
          Partition type: FAT12 (0x1)  [#2:0x1c2+0x1]
          Last sector (CHS): fe ff ff  |...| — C/H/S 1023/254/63  [#2:0x1c3+0x3]
          First sector (LBA): 1  [#2:0x1c6+0x4]
          Sectors: 48 — 24 KiB  [#2:0x1ca+0x4]
      ▾ Volume — FAT12 filesystem "VIRTUAL", 24 KiB, 44 clusters of 512 bytes  [#2:0x200+0x6000]
        ▾ Boot sector (BPB) — OEM "MSWIN4.1"  [#2:0x200+0x200]
            Jump instruction: eb 3c 90  |.<.|  [#2:0x200+0x3]
            OEM name: "MSWIN4.1"  [#2:0x203+0x8]
            Bytes per sector: 512  [#2:0x20b+0x2]
            Sectors per cluster: 1  [#2:0x20d+0x1]
            Reserved sectors: 1  [#2:0x20e+0x2]
            Number of FATs: 2  [#2:0x210+0x1]
            Root directory entries: 16  [#2:0x211+0x2]
            Total sectors (16-bit): 48  [#2:0x213+0x2]
            Media descriptor: fixed disk (0xf8)  [#2:0x215+0x1]
            Sectors per FAT (FAT12/16): 1  [#2:0x216+0x2]
            Sectors per track: 32  [#2:0x218+0x2]
            Heads: 2  [#2:0x21a+0x2]
            Hidden sectors: 0  [#2:0x21c+0x4]
            Total sectors (32-bit): 0  [#2:0x220+0x4]
        ▾ Extended BPB  [#2:0x224+0x1a]
            Drive number: 0x80  [#2:0x224+0x1]
            Reserved: 0  [#2:0x225+0x1]
            Extended boot signature: 0x29  [#2:0x226+0x1]
            Volume serial number: 0x1234abcd  [#2:0x227+0x4]
            Volume label: "VIRTUAL    "  [#2:0x22b+0xb]
            Filesystem type: "FAT12   "  [#2:0x236+0x8]
        ▾ FAT 1 — FAT12 entries  [#2:0x400+0x200]
            Cluster 2 — end of chain → #2:0xa00+0x200
            Clusters 3–29 — free
            Cluster 30 — → 31 → #2:0x4200+0x200
            Cluster 31 — end of chain → #2:0x4400+0x200
            Clusters 32–45 — free
          FAT 2 — copy  [#2:0x600+0x200]
        ▾ Root directory  [#2:0x800+0x200]
            Volume label: "VIRTUAL"  [#2:0x800+0x20]
          ▾ README.TXT — 22 bytes, modified 2024-05-17 13:37:42  [#2:0x820+0x20]
            ▾ Directory entry  [#2:0x820+0x20]
                Short name: "README.TXT"  [#2:0x820+0xb]
                Attributes: 0x20 [ARCHIVE]  [#2:0x82b+0x1]
                Case flags (NT): 0x0 []  [#2:0x82c+0x1]
                Creation time, 10 ms units: 100  [#2:0x82d+0x1]
                Created: 2024-05-17 13:37:42 UTC  [#2:0x82e+0x4]
                Accessed: 2024-05-17 00:00:00 UTC  [#2:0x832+0x2]
                First cluster (high word): 0  [#2:0x834+0x2]
                Modified: 2024-05-17 13:37:42 UTC  [#2:0x836+0x4]
                First cluster (low word): 2  [#2:0x83a+0x2]
                File size: 22 — 22 bytes  [#2:0x83c+0x4]
            ▾ Clusters — contiguous, 22 bytes
                Fragment 0 — file offset 0x0, 22 bytes  [#2:0xa00+0x16]
            ▾ Content — 22 bytes  [#2:0xa00+0x16]
                Data  [#2:0xa00+0x16]
          ▾ FAR.TXT — 680 bytes, modified 2024-05-17 13:37:42  [#2:0x840+0x20]
            ▾ Directory entry  [#2:0x840+0x20]
                Short name: "FAR.TXT"  [#2:0x840+0xb]
                Attributes: 0x20 [ARCHIVE]  [#2:0x84b+0x1]
                Case flags (NT): 0x0 []  [#2:0x84c+0x1]
                Creation time, 10 ms units: 100  [#2:0x84d+0x1]
                Created: 2024-05-17 13:37:42 UTC  [#2:0x84e+0x4]
                Accessed: 2024-05-17 00:00:00 UTC  [#2:0x852+0x2]
                First cluster (high word): 0  [#2:0x854+0x2]
                Modified: 2024-05-17 13:37:42 UTC  [#2:0x856+0x4]
                First cluster (low word): 30  [#2:0x85a+0x2]
                File size: 680 — 680 bytes  [#2:0x85c+0x4]
            ▾ Clusters — contiguous, 680 bytes
                Fragment 0 — file offset 0x0, 680 bytes  [#2:0x4200+0x2a8]
            ▾ Content — 680 bytes  [#2:0x4200+0x2a8]
                Data  [#2:0x4200+0x2a8]
          Data region — 22 KiB  [#2:0xa00+0x5800]
      Boot signature: 0xaa55  [#2:0x1fe+0x2]
